# moni

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: rust.yml
configs/: default.toml
crates/agent/: Cargo.toml
crates/agent/src/: documents.rs  errors.rs  gemini.rs  lib.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: error.rs  file.rs  lib.rs
crates/gemini/: Cargo.toml
crates/gemini/src/client/: mod.rs
crates/vertex_ai/: Cargo.toml  data  result_txt  test
crates/vertex_ai/src/: error.rs  lib.rs
crates/vertex_ai/src/client/: error.rs  mod.rs
crates/vertex_ai/src/data_store/: data_store.rs  error.rs  mod.rs
crates/vertex_ai/src/discovery_engine/: client.rs  error.rs
dockers/: docker-compose.yaml
migrations/: 1_promts.sql
src/: documents.rs  main.rs  router.rs  routes.rs  settings.rs  templates.rs
src/data_sources/: mod.rs
src/models/: documents.rs  error.rs  mod.rs
src/models/store/: error.rs  mod.rs
static/: dialog.js
templates/: add_to_report_dialogue.html  alerts_config.html  base.html  document_card.html  document_detail.html  documents.html  index.html  insights_report_page.html
test-data/: testdata.json
