[package]
name = "moni"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"

google-generative-ai-rs = { version = "0.3.0", features = ["beta"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.38.0"
agent = { path = "./crates/agent" }

