[package]
name = "moni"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
config = "0.14.0"

google-generative-ai-rs = { version = "0.3.0", features = ["beta"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
tokio = "1.38.0"

tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
firebase-rs = "2.1.2"
thiserror = "1.0.61"
uuid = { version = "1.9.1", features = ["v7"] }
lopdf = { version = "0.32.0", features = ["pom", "pom_parser"] }
unicode-segmentation = "1.9.0"

[dependencies]
anyhow.workspace = true
askama = { workspace = true, features = ["with-axum"] }
askama_axum.workspace = true
axum.workspace = true
config.workspace = true
firebase-rs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v7"] }
