[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
gcp_auth = "0.12.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
